Fix: Mobile/Tooltip cropping

--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -10,6 +10,7 @@
 #search-results-container.mobile {
   overflow: hidden;
 }
+
 /* "#search-results-container.mobile .back-button" is in styles.css because accessing child components only works if they are included without router-outlet */
 #search-results-container.mobile #search-results {
   width: 200%;
@@ -17,7 +18,7 @@
   margin-top: 15px;
   transition: margin 0.5s ease-in-out;
 }
-#search-results-container.mobile #search-results.details {
+#search-results-container.mobile.details #search-results {
   margin-left: -100%;
   transition: margin 0.5s ease-in-out;
 }
